# gps-miniprojekt

./: .gitignore  Cargo.toml  data.json  data_proc.ipynb  notes.md  rust-toolchain.toml  steady_data.json  steady_data_2.json
.cargo/: config.toml
examples/: gy-63.rs  test.rs
report/: .gitignore  README.md  make_fig.py  master.bcf-SAVE-ERROR  master.tex  requirements.txt
report/bib/: mybib.bib
report/chapters/00Frontmatter/: 01frontpage.tex  02colophon.tex  03titlepages.tex  04Preface.tex  meta.tex
report/chapters/01Introduction/: 00meta.tex
report/chapters/02Harware/: 00meta.tex  01Test.tex
report/chapters/02Harware/figures/: 02Multipath_illustration_of_multipath.py
report/chapters/03Filter/: 00meta.tex
report/chapters/03Software/: 00meta.tex  01Test.tex
report/chapters/04Software/: 00meta.tex
report/chapters/05Results/: 00meta.tex  01Test.tex
report/chapters/06Conclusion/: 00meta.tex
report/chapters/07Appendix/01Maalejournaler/: 00meta.tex
report/setup/: acronyms.tex  macros.tex  preamble.tex
src/: gnss.rs  kalman.rs  lib.rs  main.rs  ms5611.rs
